Bug 334970 - "More Settings..." popup badly positioned on first show
Summary: "More Settings..." popup badly positioned on first show
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 335009 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-18 00:05 UTC by Eike Hein
Modified: 2014-05-21 13:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Ill-positioned popup (52.01 KB, image/png)
2014-05-18 00:06 UTC, Eike Hein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-05-18 00:05:49 UTC
See upcoming attached screenshot. Actual bug is likely in Dialog somewhere; visualParent is set correctly.

File reference: plasma-desktop.git:desktoppackage/contents/configuration/panelconfiguration/ToolBar.qml

Reproducible: Always
Comment 1 Eike Hein 2014-05-18 00:06:18 UTC
Created attachment 86681 [details]
Ill-positioned popup
Comment 2 Eike Hein 2014-05-18 00:06:52 UTC
Wondering if size sync problems like bug 334964 might be related/relevant.
Comment 3 David Edmundson 2014-05-19 21:09:37 UTC
Confirming.
Might well be related, if the content is in a loader or something.
Comment 4 Sebastian Kügler 2014-05-20 00:11:24 UTC
The second time it's shown, it is positioned correctly for me. (I can dismiss it using the part of the More Settings button that's still visible.)
Comment 5 Sebastian Kügler 2014-05-20 00:12:03 UTC
*** Bug 335009 has been marked as a duplicate of this bug. ***
Comment 6 Marco Martin 2014-05-21 13:46:20 UTC
Git commit d2d61c4da3ee92868f775d617af7fe3665a8f99c by Marco Martin.
Committed on 21/05/2014 at 13:44.
Pushed by mart into branch 'master'.

reposition when resizing if there is visualParent
Related: bug 334964

M  +4    -0    src/plasmaquick/dialog.cpp

http://commits.kde.org/plasma-framework/d2d61c4da3ee92868f775d617af7fe3665a8f99c