reposition when resizing if there is visualParent

BUG:334970
BUG:334964